--- a/micronemez/Micronemez/Micronemez/Micronemez-Info.plist
+++ b/micronemez/Micronemez/Micronemez/Micronemez-Info.plist
@@ -18,6 +18,8 @@
 				<string>icon-72@2x.png</string>
 				<string>icon-57.png</string>
 			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
@@ -40,6 +42,8 @@
 	<string>MainStoryboard_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>MainStoryboard_iPad</string>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
